--- a/proj-braw/brawbrawl/src/view/Home/style.scss
+++ b/proj-braw/brawbrawl/src/view/Home/style.scss
@@ -8,6 +8,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+/* Imagem de fundo */
 .card-image{
     background-image: url("../../assets/images/jumbo.jpg");
     background-size: cover;
