--- a/proj-braw/brawbrawl/main.scss
+++ b/proj-braw/brawbrawl/main.scss
@@ -1,8 +1,10 @@
+/* Cores tema */
 $theme-colors: (
   "primary": #16a596,
   "secundary": #898b8a,
   "danger": #690802
 );
+/* Paleta de cores */
 $cor1: #16a596;
 $cor2: #898b8a;
 $cor3: #f6f5f1;
