--- a/proj-braw/brawbrawl/src/view/Partida/style.scss
+++ b/proj-braw/brawbrawl/src/view/Partida/style.scss
@@ -8,22 +8,28 @@
     font-size: small;
     float: left;
 }
+/* Tamanho do card */
 .card-size{
     margin-right: 10px;
 }
+
+/* Cor de fundo das imagens  */
 .image-st{
     background-color: #222831;
 }
+/* Estilo do card */
 .card-body-st{
     padding-top: 0;
     background-color: #898b8a ;
     height:auto;
 }
+/* Tamanho da etiqueta */
 .badge-st{
     margin-left: -17px;
     width: 100px;
     font-size: 15px;
 }
+/* Posição dos containers*/
 .container-st{
     float: left;
 }
